--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.2+2
+  gurps_rpm_model:
+    git:
+      url: https://github.com/mjeffw/gurps_rpm_model
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
