--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
     git:
       url: https://github.com/mjeffw/gurps_rpm_model
     version: 1.1.0
-
+  flutter_material_pickers: ^1.7.4
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
