--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,9 @@ dependencies:
   gurps_rpm_model:
     git:
       url: https://github.com/mjeffw/gurps_rpm_model
-    version: 1.3.1
+    version: ^1.4.0
   flutter_material_pickers: ^1.7.4
+  tuple: ^1.0.3
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
