--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   provider: ^4.3.2+2
   flutter_material_pickers: ^1.7.4
+  flutter_typeahead_web: ^1.0.0+1
   tuple: ^1.0.3
   gurps_rpm_model:
     version: ^1.5.1
@@ -39,6 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test_coverage: ^0.4.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
