--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,18 @@ dependencies:
   tuple: ^1.0.3
   flutter_masked_text: ^0.8.0
   gurps_rpm_model:
-    version: 0.8.1
+    version: 0.8.3
     git:
-      url: https://github.com/mjeffw/gurps_rpm_model
+      url: https://github.com/mjeffw/gurps_rpm_model.git
+  gurps_dice:
+    version: ^1.1.0
+    git:
+      url: https://github.com/mjeffw/gurps_dice.git
   gurps_dart:
-    version: 1.4.1
+    version: ^1.4.1
     git:
       url: https://github.com/mjeffw/gurps_dart.git
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
