add widget unit tests for DiceSpinner; move TextConverter to utils.

--- a/.gitignore
+++ b/.gitignore
@@ -51,18 +51,4 @@ coverage/index.html
 coverage/ruby.png
 coverage/snow.png
 coverage/updown.png
-coverage/widgets/arrow_button.dart.func-sort-c.html
-coverage/widgets/arrow_button.dart.func.html
-coverage/widgets/arrow_button.dart.gcov.html
-coverage/widgets/delete_button.dart.func-sort-c.html
-coverage/widgets/delete_button.dart.func.html
-coverage/widgets/delete_button.dart.gcov.html
-coverage/widgets/dynamic_list_header.dart.func-sort-c.html
-coverage/widgets/dynamic_list_header.dart.func.html
-coverage/widgets/dynamic_list_header.dart.gcov.html
-coverage/widgets/edit_button.dart.func-sort-c.html
-coverage/widgets/edit_button.dart.func.html
-coverage/widgets/edit_button.dart.gcov.html
-coverage/widgets/index-sort-f.html
-coverage/widgets/index-sort-l.html
-coverage/widgets/index.html
+coverage/widgets/
