--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,22 +23,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.2+2
-  flutter_material_pickers: ^1.7.4
+  provider: ^4.3.3
+  flutter_material_pickers: ^1.9.2
   flutter_typeahead_web: ^1.0.0+1
   tuple: ^1.0.3
-  flutter_markdown: ^0.5.0
-  url_launcher: ^5.7.8
+  flutter_markdown: ^0.5.2
+  url_launcher: ^5.7.10
   gurps_rpm_model:
     version: ^1.0.1
     git:
       url: https://github.com/mjeffw/gurps_rpm_model.git
   gurps_dice:
-    version: ^1.1.0
+    version: ^1.1.1
     git:
       url: https://github.com/mjeffw/gurps_dice.git
   gurps_dart:
-    version: ^1.4.2
+    version: ^1.4.4
     git:
       url: https://github.com/mjeffw/gurps_dart.git
 
@@ -50,7 +50,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test_coverage: ^0.4.3
+  test_coverage: ^0.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
